@@ -10,7 +10,7 @@ import org.openqa.selenium.remote.AbstractDriverOptions;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.safari.SafariOptions;
 
-import java.net.URL;
+import java.net.URI;
 import java.time.Duration;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -18,7 +18,8 @@ import java.util.Map;
 /**
  * Creates a {@link RemoteWebDriver} session against BrowserStack Automate.
  *
- * <p>Uses the W3C {@code bstack:options} extension capability — no credentials
+ * <p>
+ * Uses the W3C {@code bstack:options} extension capability — no credentials
  * in the URL, full Selenium 4 protocol compliance.
  *
  * <pre>
@@ -46,32 +47,40 @@ public class BrowserStackProvider implements DriverProvider {
         TestFlyConfig cfg = TestFlyContext.getConfig();
         TestFlyConfig.Execution.BrowserStack bs = cfg.getExecution().getBrowserstack();
 
-        String username   = resolveEnv(bs.getUsername());
-        String accessKey  = resolveEnv(bs.getAccessKey());
-        String browser    = bs.getBrowser() != null ? bs.getBrowser() : "chrome";
-        String testId     = TestFlyContext.getCurrentTestId();
+        String username = resolveEnv(bs.getUsername());
+        String accessKey = resolveEnv(bs.getAccessKey());
+        String browser = bs.getBrowser() != null ? bs.getBrowser() : "chrome";
+        String testId = TestFlyContext.getCurrentTestId();
 
-        if (isBlank(username)) throw new IllegalStateException("[BrowserStack] execution.browserstack.username is required");
-        if (isBlank(accessKey)) throw new IllegalStateException("[BrowserStack] execution.browserstack.accessKey is required");
+        if (isBlank(username))
+            throw new IllegalStateException("[BrowserStack] execution.browserstack.username is required");
+        if (isBlank(accessKey))
+            throw new IllegalStateException("[BrowserStack] execution.browserstack.accessKey is required");
 
         Map<String, Object> bstackOptions = new LinkedHashMap<>();
-        bstackOptions.put("userName",   username);
-        bstackOptions.put("accessKey",  accessKey);
-        if (!isBlank(bs.getOs()))        bstackOptions.put("os",        bs.getOs());
-        if (!isBlank(bs.getOsVersion())) bstackOptions.put("osVersion", bs.getOsVersion());
-        if (!isBlank(bs.getDevice()))    bstackOptions.put("deviceName", bs.getDevice());
-        if (!isBlank(bs.getDevice()))    bstackOptions.put("realMobile", String.valueOf(bs.isRealMobile()));
-        if (!isBlank(testId))            bstackOptions.put("sessionName", testId);
+        bstackOptions.put("userName", username);
+        bstackOptions.put("accessKey", accessKey);
+        if (!isBlank(bs.getOs()))
+            bstackOptions.put("os", bs.getOs());
+        if (!isBlank(bs.getOsVersion()))
+            bstackOptions.put("osVersion", bs.getOsVersion());
+        if (!isBlank(bs.getDevice()))
+            bstackOptions.put("deviceName", bs.getDevice());
+        if (!isBlank(bs.getDevice()))
+            bstackOptions.put("realMobile", String.valueOf(bs.isRealMobile()));
+        if (!isBlank(testId))
+            bstackOptions.put("sessionName", testId);
         // User-defined bstack:options overrides
-        if (bs.getCapabilities() != null) bstackOptions.putAll(bs.getCapabilities());
+        if (bs.getCapabilities() != null)
+            bstackOptions.putAll(bs.getCapabilities());
 
         AbstractDriverOptions<?> options = buildOptions(browser, bs.getBrowserVersion(), bstackOptions);
 
         try {
-            WebDriver driver = new RemoteWebDriver(new URL(HUB_URL), options);
+            WebDriver driver = new RemoteWebDriver(URI.create(HUB_URL).toURL(), options);
             driver.manage().timeouts().implicitlyWait(Duration.ZERO);
             driver.manage().timeouts().pageLoadTimeout(
-                Duration.ofSeconds(cfg.getTimeouts().getPageLoad()));
+                    Duration.ofSeconds(cfg.getTimeouts().getPageLoad()));
             return driver;
         } catch (Exception e) {
             throw new IllegalStateException("[BrowserStack] Failed to create session: " + e.getMessage(), e);
@@ -83,25 +92,29 @@ public class BrowserStackProvider implements DriverProvider {
         switch (browser.toLowerCase()) {
             case "firefox": {
                 FirefoxOptions o = new FirefoxOptions();
-                if (!isBlank(browserVersion)) o.setBrowserVersion(browserVersion);
+                if (!isBlank(browserVersion))
+                    o.setBrowserVersion(browserVersion);
                 o.setCapability("bstack:options", bstackOptions);
                 return o;
             }
             case "edge": {
                 EdgeOptions o = new EdgeOptions();
-                if (!isBlank(browserVersion)) o.setBrowserVersion(browserVersion);
+                if (!isBlank(browserVersion))
+                    o.setBrowserVersion(browserVersion);
                 o.setCapability("bstack:options", bstackOptions);
                 return o;
             }
             case "safari": {
                 SafariOptions o = new SafariOptions();
-                if (!isBlank(browserVersion)) o.setBrowserVersion(browserVersion);
+                if (!isBlank(browserVersion))
+                    o.setBrowserVersion(browserVersion);
                 o.setCapability("bstack:options", bstackOptions);
                 return o;
             }
             default: {
                 ChromeOptions o = new ChromeOptions();
-                if (!isBlank(browserVersion)) o.setBrowserVersion(browserVersion);
+                if (!isBlank(browserVersion))
+                    o.setBrowserVersion(browserVersion);
                 o.setCapability("bstack:options", bstackOptions);
                 return o;
             }
@@ -109,7 +122,8 @@ public class BrowserStackProvider implements DriverProvider {
     }
 
     public static String resolveEnv(String value) {
-        if (value == null) return null;
+        if (value == null)
+            return null;
         if (value.startsWith("${") && value.endsWith("}")) {
             String var = value.substring(2, value.length() - 1);
             String resolved = System.getenv(var);
@@ -118,5 +132,7 @@ public class BrowserStackProvider implements DriverProvider {
         return value;
     }
 
-    private static boolean isBlank(String s) { return s == null || s.isBlank(); }
+    private static boolean isBlank(String s) {
+        return s == null || s.isBlank();
+    }
 }
